# model-infer-app

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.infra.yml  pyproject.toml
apps/frontend/: Dockerfile  main.py
apps/frontend/templates/: index.html
scripts/: init-kafka.sh
services/job-api/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  repository.py  schemas.py  test_api.sh  test_job_api.sh
services/job-api/tests/: conftest.py  test_e2e.sh  test_repositories.py
services/models/: .dockerignore
services/models/distilbert/: Dockerfile  README.md  main.py  pyproject.toml  schemas.py
services/models/distilbert/tests/: test_app.py  test_e2e.sh
services/models/shared/: __init__.py  image_utils.py  metrics.py  model_utils.py  pyproject.toml
services/models/vqa/: Dockerfile  README.md  main.py  pyproject.toml  schemas.py
services/models/vqa/tests/: test_app.py  test_e2e.sh
services/models/yolo/: Dockerfile  README.md  main.py  pyproject.toml  render.py  schemas.py
services/models/yolo/tests/: test_app.py  test_e2e.sh
tests/: README.md  run_all.sh  run_e2e_tests.sh  run_tests.sh
tests/components/: test_job_api.sh
tests/utils/: test_utils.sh
